# shortmagician

./: .env  .env.example  .firebaserc  .gitignore  README.md  design-system.css  firestore.rules  index.html  package.json  tsconfig.json  vite.config.ts
backend/: .env  .env.example  backend_entry.py  requirements.txt  test_pipeline_e2e.py
backend/app/: config.py  firebase_init.py  main.py  schemas_user.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_middleware.py  test_pipeline_router.py  test_pipeline_schemas.py  test_pipeline_transcribe.py  test_pipeline_translate.py  test_pipeline_tts.py  test_users.py
functions/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
scripts/: build-portable.ps1  embed_secrets.py  release.sh  seed-earlybird.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: cleanup_pipeline.rs  compose_video.rs  extract_audio.rs  generate_subtitles.rs  mod.rs
src/__tests__/: AuthContext.test.tsx  AuthModal.test.tsx  ConvertLoadingModal.test.tsx  EarlybirdModal.test.tsx  audioExtractor.test.ts  cancellation.test.tsx  cleanup.test.ts  editorPipelineLoad.test.tsx  languages.test.ts  pipelineService.test.ts  pipelineState.test.tsx  segmentSplitter.test.ts  subtitleEdit.test.tsx  subtitleGenerator.test.ts  videoComposer.test.ts  voiceSelector.test.tsx
src/contexts/: AuthContext.tsx  PipelineContext.tsx
src/lib/: api.ts  (+6 more)
(+113 files in other folders)
